# ai-assessment

./: .dockerignore  .env.example  .gitignore  APPROACH.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  railway.json
config/: domain_policies.yaml  models.yaml  risk_categories.yaml  source_authority.yaml
docs/: DESIGN_SUMMARY.md  FETCH_LOGS_AND_RECOVERY.md  NEO4J_PIPELINE_AND_TIMELINE.md  NEO4J_QUERIES.md  RAILWAY_DEPLOYMENT.md  cost-economics.md  deriv_ai_deep_research_agent_prd.docx  design-summary-v3-lead.md  discovery-stories.md  frontend-console-prompt.md  implementation-plan-graph-reasoning.md  lessons-and-limitations.md  observability-guide.md  supabase-storage-setup.md  theme-and-design.md
frontend/: README.md  next.config.cjs  next.config.js  next.config.ts  package-lock.json  package.json  tsconfig.json
outputs/: timothy_overturf_metadata.json  timothy_overturf_report.md  timothy_overturf_state.json
outputs_captured/: README.md  adam_neumann_entities.json  adam_neumann_metadata.json  adam_neumann_report.md  adam_neumann_state.json  jensen_huang_entities.json  jensen_huang_metadata.json  jensen_huang_progress.jsonl  jensen_huang_report.md  jensen_huang_state.json  sam_altman_metadata.json  sam_altman_report.md  sam_altman_state.json  timothy_overturf_entities.json  timothy_overturf_metadata.json  timothy_overturf_progress.jsonl  timothy_overturf_report.md  timothy_overturf_report_redacted.md  timothy_overturf_state.json
scripts/: __init__.py  check_env.py  merge_temporal_into_state.py  push_prompts_to_langsmith.py  run-claude-direct.sh  run_synthesis_only.py  test_fact_extractor_parse.py
src/: __init__.py  config.py  graph.py  llm_client.py  main.py  models.py  pii.py  run_metadata.py
tests/: __init__.py  conftest.py  test_agents.py  (+4 more)
(+116 files in other folders)
