[project]
name = "deep-research-agent"
version = "1.0.0"
description = "Autonomous Deep Research AI Agent for intelligence gathering and due diligence"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langsmith>=0.2.0",
    "tavily-python>=0.5.0",
    "neo4j>=5.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.40.0",
    "tenacity>=8.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "structlog>=24.0.0",
    "rapidfuzz>=3.0.0",
    "json-repair>=0.30.0",
    "pymupdf>=1.24.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.0",
    "prometheus-client>=0.21.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
]

[project.optional-dependencies]
fetch-crawl4ai = [
    "crawl4ai>=0.4.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "S", "B", "A", "SIM"]
ignore = [
    "ANN101", "ANN102", "ANN401", "S101",
    "UP042",  # str Enum intentional for serialization
    "UP045",  # Optional[] acceptable for compatibility
    "UP017",  # timezone.utc works across 3.9+
    "S324",   # md5 used for non-crypto dedup only
]

[tool.ruff.lint.per-file-ignores]
"src/prompts/templates.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
